--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -15,7 +15,8 @@
   position: fixed;
   width: 100%;
   height: 5.5em;
-  box-shadow: 0px 6px 8px #888888;
+  box-shadow: 0px 2px 3px #888888;
+  overflow: hidden;
 
 }
 
@@ -46,3 +47,4 @@
 .nav-right {
   float: right;
 }
+
